@@ -64,26 +64,27 @@ public final class StartupActionScriptManager {
       for (ActionCommand command : commands) {
         command.execute();
       }
+      return;
     }
-    else {
-      List<ActionCommand> script;
-      try {
-        List<ActionCommand> savedScript = loadActionScript(getActionScriptFile());
-        script = new ArrayList<>(savedScript.size() + commands.size());
-        script.addAll(savedScript);
-        script.addAll(commands);
-      }
-      catch (ObjectStreamException e) {
-        Logger.getInstance(StartupActionScriptManager.class).warn(e);
-        script = new ArrayList<>(commands);
-      }
 
-      saveActionScript(script);
+    List<ActionCommand> script;
+    Path actionScriptFile = getActionScriptFile();
+    try {
+      List<ActionCommand> savedScript = loadActionScript(actionScriptFile);
+      script = new ArrayList<>(savedScript.size() + commands.size());
+      script.addAll(savedScript);
+      script.addAll(commands);
     }
+    catch (ObjectStreamException e) {
+      Logger.getInstance(StartupActionScriptManager.class).warn(e);
+      script = new ArrayList<>(commands);
+    }
+
+    saveActionScript(script, actionScriptFile);
   }
 
   private static @NotNull Path getActionScriptFile() {
-    return Paths.get(PathManager.getPluginTempPath(), ACTION_SCRIPT_FILE);
+    return Path.of(PathManager.getPluginTempPath(), ACTION_SCRIPT_FILE);
   }
 
   public static @NotNull List<ActionCommand> loadActionScript(@NotNull Path scriptFile) throws IOException {
@@ -107,10 +108,6 @@ public final class StartupActionScriptManager {
     }
   }
 
-  private static void saveActionScript(@Nullable List<ActionCommand> commands) throws IOException {
-    saveActionScript(commands, getActionScriptFile());
-  }
-
   public static void saveActionScript(@Nullable List<ActionCommand> commands, @NotNull Path scriptFile)
     throws IOException {
     if (commands == null) {
@@ -126,9 +123,9 @@ public final class StartupActionScriptManager {
 
   private static ActionCommand mapPaths(ActionCommand command, Path oldTarget, Path newTarget) {
     if (command instanceof CopyCommand) {
-      Path destination = mapPath(((CopyCommand)command).myDestination, oldTarget, newTarget);
+      Path destination = mapPath(((CopyCommand)command).destination, oldTarget, newTarget);
       if (destination != null) {
-        return new CopyCommand(Paths.get(((CopyCommand)command).mySource), destination);
+        return new CopyCommand(Paths.get(((CopyCommand)command).source), destination);
       }
     }
     else if (command instanceof UnzipCommand) {
@@ -169,12 +166,12 @@ public final class StartupActionScriptManager {
   public static final class CopyCommand implements Serializable, ActionCommand {
     private static final long serialVersionUID = 201708031943L;
 
-    private final String mySource;
-    private final String myDestination;
+    private final String source;
+    private final String destination;
 
     public CopyCommand(@NotNull Path source, @NotNull Path destination) {
-      mySource = source.toAbsolutePath().toString();
-      myDestination = destination.toAbsolutePath().toString();
+      this.source = source.toAbsolutePath().toString();
+      this.destination = destination.toAbsolutePath().toString();
     }
 
     /**
@@ -182,33 +179,26 @@ public final class StartupActionScriptManager {
      */
     @Deprecated
     public CopyCommand(@NotNull File source, @NotNull File destination) {
-      mySource = source.getAbsolutePath();
-      myDestination = destination.getAbsolutePath();
+      this.source = source.getAbsolutePath();
+      this.destination = destination.getAbsolutePath();
     }
 
     @Override
     public void execute() throws IOException {
-      File source = new File(mySource), destination = new File(myDestination);
-      if (!source.isFile()) {
-        throw new IOException("Source file missing: " + source);
-      }
-
-      File destDir = destination.getParentFile();
-      if (!(destDir.isDirectory() || destDir.mkdirs())) {
-        throw new IOException("Cannot create a directory: " + destDir);
-      }
-
-      FileUtilRt.copy(source, destination);
+      Path destination = Paths.get(this.destination);
+      Path destDir = destination.getParent();
+      Files.createDirectories(destDir);
+      Files.copy(Paths.get(source), destination);
     }
 
     @Override
     @NonNls
     public String toString() {
-      return "copy[" + mySource + "," + myDestination + "]";
+      return "copy[" + source + "," + destination + "]";
     }
 
     public String getSource() {
-      return mySource;
+      return source;
     }
   }
 
@@ -280,10 +270,9 @@ public final class StartupActionScriptManager {
 
     @Override
     public void execute() throws IOException {
-      File source = new File(mySource);
-      if (source.exists() && !FileUtilRt.delete(source)) {
-        throw new IOException("Cannot delete: " + source);
-      }
+      // source here it is directory - Files.deleteIfExists must be not used here
+      // todo use NioFiles (see IDEA-CR-69550)
+      FileUtilRt.delete(new File(mySource));
     }
 
     @Override
